--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kamei-ryousuke2",
+  "name": "kamei-ryousuke",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.2.4",
+    "@heroicons/react": "^2.0.16",
+    "framer-motion": "^9.0.4",
+    "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.3",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^5.15.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "typescript": "4.9.5"
+    "@types/node": "18.7.17",
+    "@types/react": "18.0.19",
+    "autoprefixer": "^10.4.9",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
+    "postcss": "^8.4.16",
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.3"
   }
 }
