--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "framer-motion": "^9.0.4",
+    "init": "^0.1.2",
     "next": "12.3.0",
+    "npx": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.3",
@@ -24,9 +26,9 @@
     "autoprefixer": "^10.4.9",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.8.3"
   }
 }
